[gd_scene load_steps=5 format=3 uid="uid://dyj1mghiprnif"]

[ext_resource type="Texture2D" uid="uid://b5v4m76q82pvo" path="res://images/treasure_room.png" id="1_6r2pc"]
[ext_resource type="Script" path="res://scripts/QuickDraw.gd" id="1_7gkp1"]
[ext_resource type="Texture2D" uid="uid://bcufqddtq07kv" path="res://images/darkpirategun.png" id="2_jqxri"]
[ext_resource type="Texture2D" uid="uid://cy2n6smapxscv" path="res://images/lightpirateguntwo.png" id="3_r8qdl"]

[node name="QuickDraw" type="Node2D"]
script = ExtResource("1_7gkp1")

[node name="TreasureRoom" type="Sprite2D" parent="."]
position = Vector2(593, 316)
scale = Vector2(2.39063, 1.33203)
texture = ExtResource("1_6r2pc")

[node name="RackSprite" type="Sprite2D" parent="."]
position = Vector2(500, 400)
scale = Vector2(-0.7, 0.7)
texture = ExtResource("2_jqxri")

[node name="AlexSprite" type="Sprite2D" parent="."]
position = Vector2(680, 400)
scale = Vector2(-0.5, 0.5)
texture = ExtResource("3_r8qdl")

[node name="RackHealth" type="Label" parent="."]
offset_left = 26.0
offset_top = 14.0
offset_right = 242.0
offset_bottom = 37.0
scale = Vector2(2, 2)
text = "❤️ ❤️ ❤️ ❤️ ❤️ ❤️ ❤️ ❤️ ❤️ ❤️"

[node name="AlexHealth" type="Label" parent="."]
offset_left = 676.0
offset_top = 14.0
offset_right = 896.0
offset_bottom = 37.0
scale = Vector2(2, 2)
text = " ❤️ ❤️ ❤️ ❤️ ❤️ ❤️ ❤️ ❤️ ❤️ ❤️"
horizontal_alignment = 2

[node name="WaitLabel" type="Label" parent="."]
offset_left = 476.0
offset_top = 59.0
offset_right = 724.0
offset_bottom = 196.0
theme_override_colors/font_color = Color(0.995312, 0, 0.182021, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "WAIT"
horizontal_alignment = 1
